[tool.poetry]
name = "nmass"
version = "0.1.4"
description = "A python3 library that makes it easier to use nmap and masscan"
authors = ["4shen0ne <4shen.01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic-xml = "^2.11.0"
aiofiles = "^24.1.0"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic_xml.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
